--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,14 @@
         android:text="@string/btn_float_trans"
         android:background="@color/colorPrimary"
         android:textColor="#ffff"/>
+
+    <Button
+        android:id="@+id/btn_float_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:text="@string/btn_float_menu"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffff"/>
+
 </LinearLayout>
